# luwrain-macos

./: .gitignore  README.md  build.gradle
jni/: CMakeLists.txt  native-gen.sh
jni/src/headers/: carbon_tts.h
jni/src/sources/: carbon_tts.cpp  main.cpp  org_luwrain_macos_speech_CarbonTts.cpp  org_luwrain_macos_term_Terminal.cpp  org_luwrain_os_Terminal.cpp  org_luwrain_os_speech_CarbonTts.cpp
src/main/java/org/luwrain/macos/: ImportantLocations.java  Macos.java
src/main/java/org/luwrain/macos/speech/: CarbonTts.java  VoiceDescription.java
src/main/java/org/luwrain/macos/term/: Terminal.java  TerminalException.java
src/main/java/org/luwrain/os/: Init.java  SpeechBackEnds.java  Terminal.java
src/main/java/org/luwrain/os/speech/: CarbonTts.java  VoiceDescription.java
